--- a/App/src/main/resources/com/mycompany/app/Reportes.fxml
+++ b/App/src/main/resources/com/mycompany/app/Reportes.fxml
@@ -9,8 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/20.0.1" fx:controller="com.mycompany.app.ReportesController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.app.ReportesController">
    <children>
       <BorderPane layoutX="13.0" layoutY="77.0" prefHeight="200.0" prefWidth="573.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
          <top>
@@ -21,13 +20,16 @@
             </Label>
          </top>
          <right>
-            <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
+            <VBox prefHeight="271.0" prefWidth="180.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Label text="Fecha:" />
+               </children></VBox>
          </right>
          <bottom>
             <Button fx:id="BtnVolver" mnemonicParsing="false" onAction="#GoToStart" text="Volver" BorderPane.alignment="CENTER" />
          </bottom>
          <center>
-            <ListView prefHeight="297.0" prefWidth="400.0" BorderPane.alignment="CENTER">
+            <ListView prefHeight="277.0" prefWidth="382.0" BorderPane.alignment="CENTER">
                <BorderPane.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </BorderPane.margin>
