--- a/App/src/main/resources/com/mycompany/app/MateriasParalelos.fxml
+++ b/App/src/main/resources/com/mycompany/app/MateriasParalelos.fxml
@@ -1,38 +1,111 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/20.0.1" fx:controller="com.mycompany.app.MateriasParalelosController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.app.MateriasParalelosController">
    <children>
       <BorderPane layoutX="8.0" layoutY="9.0" prefHeight="388.0" prefWidth="584.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
          <bottom>
-            <FlowPane alignment="CENTER" prefHeight="80.0" prefWidth="580.0" BorderPane.alignment="CENTER">
+            <FlowPane alignment="CENTER" prefHeight="53.0" prefWidth="580.0" BorderPane.alignment="CENTER">
                <children>
                   <Button fx:id="BtnVolver" mnemonicParsing="false" onAction="#GoToConfiguracion" text="Volver" />
-                  <Button mnemonicParsing="false" text="Agregar" />
+                  <Button fx:id="BtnAgregar" mnemonicParsing="false" onAction="#AgregarMateria" text="AgregarMateria" />
                </children>
             </FlowPane>
          </bottom>
-         <top>
-            <Label text="Materias y Paralelos" BorderPane.alignment="CENTER">
-               <font>
-                  <Font size="48.0" />
-               </font>
-            </Label>
-         </top>
          <center>
-            <ListView prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+            <TableView fx:id="TvMaterias" onMouseClicked="#MostrarParalelos" prefHeight="230.0" prefWidth="303.0" BorderPane.alignment="CENTER">
+              <columns>
+                <TableColumn fx:id="ColCodigo" prefWidth="75.0" text="Codigo" />
+                <TableColumn fx:id="ColNombre" prefWidth="75.0" text="Nombre" />
+                  <TableColumn fx:id="ColTermino" prefWidth="75.0" text="Termino" />
+                  <TableColumn fx:id="ColOpcionesMa" prefWidth="75.0" text="Opciones" />
+              </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+               <BorderPane.margin>
+                  <Insets left="10.0" />
+               </BorderPane.margin>
+            </TableView>
          </center>
          <right>
-            <ListView prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+            <TableView fx:id="TvParalelos" prefHeight="230.0" prefWidth="186.0" BorderPane.alignment="CENTER">
+              <columns>
+                <TableColumn fx:id="ColNumero" prefWidth="75.0" text="Numero" />
+                <TableColumn fx:id="ColOpcionesPa" prefWidth="75.0" text="Opciones" />
+              </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+               <BorderPane.margin>
+                  <Insets right="10.0" />
+               </BorderPane.margin>
+            </TableView>
          </right>
+         <top>
+            <VBox prefHeight="71.0" prefWidth="580.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Label text="Materias y Paralelos">
+                     <font>
+                        <Font size="25.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets left="10.0" right="10.0" top="10.0" />
+                     </VBox.margin>
+                  </Label>
+                  <HBox prefHeight="39.0" prefWidth="630.0">
+                     <children>
+                        <Label text="Termino">
+                           <HBox.margin>
+                              <Insets bottom="10.0" right="5.0" top="10.0" />
+                           </HBox.margin>
+                        </Label>
+                        <ComboBox fx:id="cmbTermino" onAction="#filtrarMateriasTermino" prefHeight="25.0" prefWidth="111.0">
+                           <HBox.margin>
+                              <Insets bottom="10.0" right="10.0" top="10.0" />
+                           </HBox.margin>
+                        </ComboBox>
+                        <Label text="Codigo">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="5.0" top="10.0" />
+                           </HBox.margin>
+                        </Label>
+                        <TextField fx:id="TfCodigo" onKeyTyped="#filtrarMateriasCodigo" prefHeight="25.0" prefWidth="126.0">
+                           <HBox.margin>
+                              <Insets bottom="10.0" right="10.0" top="10.0" />
+                           </HBox.margin>
+                        </TextField>
+                        <Label text="Nombre">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="5.0" top="10.0" />
+                           </HBox.margin>
+                        </Label>
+                        <TextField fx:id="TfNombre" onKeyTyped="#filtrarMateriasNombre" prefHeight="25.0" prefWidth="128.0">
+                           <HBox.margin>
+                              <Insets bottom="10.0" right="10.0" top="10.0" />
+                           </HBox.margin>
+                        </TextField>
+                     </children>
+                     <VBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </VBox.margin>
+                  </HBox>
+               </children>
+            </VBox>
+         </top>
       </BorderPane>
    </children>
 </AnchorPane>
