--- a/App/src/main/resources/com/mycompany/app/AgregarMateria.fxml
+++ b/App/src/main/resources/com/mycompany/app/AgregarMateria.fxml
@@ -13,11 +13,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.app.AgregarMateriaController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox alignment="TOP_CENTER" layoutX="6.0" layoutY="16.0" prefHeight="275.0" prefWidth="584.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
          <children>
-            <Label fx:id="lblMateria" text="Ingresar Materia">
+            <Label fx:id="lblTitulo" text="Ingresar Materia">
                <font>
                   <Font size="30.0" />
                </font>
