--- a/App/src/main/resources/com/mycompany/app/AgregarParalelo.fxml
+++ b/App/src/main/resources/com/mycompany/app/AgregarParalelo.fxml
@@ -1,11 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.app.AgregarParaleloController">
-    
+
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/20.0.1" >
+   <children>
+      <VBox alignment="TOP_CENTER" layoutX="16.0" layoutY="26.0" prefHeight="275.0" prefWidth="584.0">
+         <children>
+            <Label fx:id="lblMateria" text="Agregar Paralelo">
+               <font>
+                  <Font size="30.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </VBox.margin>
+            </Label>
+            <GridPane>
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label text="Numero de Paralelo" />
+                  <Label text="Estudiantes" GridPane.rowIndex="1" />
+                  <TextField fx:id="textNumero" GridPane.columnIndex="1" />
+                  <Label text="(Trabajo en progreso)" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+               </children>
+            </GridPane>
+            <FlowPane alignment="CENTER" prefHeight="74.0" prefWidth="580.0">
+               <children>
+                  <Button fx:id="BtnCancelar" mnemonicParsing="false" onAction="#GoToMaterias" text="Cancelar" />
+                  <Button fx:id="BtnIngresar" mnemonicParsing="false" onAction="#IngresarParalelo" text="Ingresar" />
+               </children>
+            </FlowPane>
+         </children>
+      </VBox>
+   </children>
 </AnchorPane>
